fixed the overflow issue

--- a/popup.css
+++ b/popup.css
@@ -27,10 +27,12 @@
 
 .popupTop {
   width: 85%;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   gap: 15px;
+
 }
 
 .titlePopup {
@@ -63,7 +65,7 @@
 
 .btnPopup {
   font-size: 0.8rem;
-  height: 38px;
+  height: 30px;
   display: flex;
   flex-wrap: nowrap;
   justify-content: space-around;
@@ -96,7 +98,7 @@
   }
 
   .popupTop {
-    height: 85%;
+    height: 80%;
     width: 85%;
     display: flex;
     flex-direction: column;
